[gd_scene load_steps=5 format=3 uid="uid://cevjshishcc78"]

[ext_resource type="Texture2D" uid="uid://4jig3p86upbm" path="res://icon.svg" id="1_7gksx"]
[ext_resource type="Script" path="res://ActualGame/scripts/UnitCell.gd" id="2_26tdv"]
[ext_resource type="Texture2D" uid="uid://dfxlh1iq4378v" path="res://Assets/TRPGIsometricAssetPack_MapIndicators.png" id="3_e853e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hpek7"]
atlas = ExtResource("3_e853e")
region = Rect2(0, 14.972, 16.0796, 10.028)

[node name="SpriteItem" type="TextureButton" node_paths=PackedStringArray("label")]
custom_minimum_size = Vector2(50, 50)
texture_normal = ExtResource("1_7gksx")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_26tdv")
label = NodePath("Label")

[node name="Selected" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hpek7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 10.0
grow_vertical = 0
text = "2"
vertical_alignment = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_selected_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_selected_focus_exited"]
